--- a/docs/eureka/配置.md
+++ b/docs/eureka/配置.md
@@ -12,3 +12,21 @@ int registrySizeThreshold = (int) (registrySize * serverConfig.getRenewalPercent
 
 ```
 
+
+
+
+
+默认开启自我保护，是不会定时剔除实例的
+
+```java
+    @Override
+    public boolean isLeaseExpirationEnabled() {
+        if (!isSelfPreservationModeEnabled()) {
+            // The self preservation mode is disabled, hence allowing the instances to expire.
+            return true;
+        }
+        return numberOfRenewsPerMinThreshold > 0 && getNumOfRenewsInLastMin() > numberOfRenewsPerMinThreshold;
+    }
+
+```
+
